[workspace]
members = [
    "adsr",
    "arp",
    "audio",
    "base",
    "buf",
    "comm",
    "delay",
    "digitar",
    "filea",
    "fir",
    "forman",
    "gain",
    "hpf",
    "iir",
    "lfo",
    "lim",
    "liner",
    "lpf",
    "mgain",
    "midi",
    "midman",
    "mul",
    "mutt",
    "noisebank",
    "null",
    "oracle",
    "osc",
    "peak",
    "printer",
    "reverb",
    "rhymel",
    "sinbank",
    "sonic",
    "stft",
    "strummer",
    "tape",
    "train",
    "unary",
    "vocoder",
]
