[workspace]
members = [
    "addsyn",
    "adsr",
    "arp",
    "audio",
    "base",
    "buf",
    "comm",
    "delay",
    "digitar",
    "afr",
    "fir",
    "afw",
    "forman",
    "gain",
    "hpf",
    "iir",
    "lfo",
    "lim",
    "liner",
    "lpf",
    "mgain",
    "midi",
    "midman", "monitor",
    "mul",
    "mutt",
    "noisebank",
    "null",
    "oracle",
    "osc",
    "pan",
    "peak",
    "printer",
    "reverb",
    "rhymel",
    "sinbank",
    "sonic",
    "stft",
    "strummer",
    "tape",
    "train",
    "unary",
    "vocoder",
]
resolver = "2"
