[workspace]
members = [
    "addsyn",
    "adsr",
    "afr",
    "afw",
    "arp",
    "audio",
    "base",
    "buf",
    "comm",
    "compressor",
    "delay",
    "digitar",
    "fir",
    "flattener",
    "forman",
    "gain",
    "gate",
    "hpf",
    "iir",
    "lfo",
    "lim",
    "liner",
    "lpf",
    "mgain",
    "midi",
    "midman",
    "monitor",
    "mul",
    "mutt",
    "noisebank",
    "null",
    "oracle",
    "osc",
    "pan",
    "peak",
    "printer",
    "reverb",
    "rhymel",
    "sinbank",
    "sonic",
    "stft",
    "strummer",
    "tape",
    "train",
    "unary",
    "vocoder",
]
resolver = "2"
