[package]
name = "audio"
version = "1.0.0"
authors = ["Dan <dansonlinepresence@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
colored = "1.9.3"
dlal-component-base = { path = "../base" }
portaudio = { git = "https://github.com/dansgithubuser/rust-portaudio" }
serde = "1.0.204"
serde_json = "1.0.48"
